src/App.css
.App {
    text-align: center;
}

.App-logo {
    height: 40vmin;
    pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
    .App-logo {
        animation: App-logo-spin infinite 20s linear;
    }
}

.App-header {
    background-color: #282c34;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
}

.App-link {
    color: #61dafb;
}

@keyframes App-logo-spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

h1 {
    font-family: "Source Sans Pro", Source Sans Pro;
    font-size: 42px;
    color: #E6007E;
}

h2 {
    font-family: "Source Sans Pro", Source Sans Pro;
    font-size: 24px;
    color: #C90404;
}

h3 {
    font-family: "Source Sans Pro", Source Sans Pro;
    font-size: 24px;
    color: #0D9816;
}

h4 {
    font-family: "Source Sans Pro", Source Sans Pro bold;
    font-size: 16px;
    color: gray;
}

p {
    font-family: "Source Sans Pro", Source Sans Pro sans-serif;
    font-size: 16px;
    color: black;
    text-align: justify;
}

ul {
    font-family: "Source Sans Pro", Source Sans Pro sans-serif;
    font-size: 18px;
    color: black;
    list-style-type: square;
}

table {
    font-family: "Source Sans Pro", Source Sans Pro sans-serif;
    font-size: 18px;
    color: black;
}

.links {
    float: left;
    margin-left: 10px;
    margin-right: 10px
}

.rechts {
    float: right;
    margin-right: 10px;
    margin-left: 10px;
}

.row {
    font-family: "Source Sans Pro", Source Sans Pro;
    font-size: 18px;
    background-color: none;
}

li a {
    width: 150px;
    align-content: center;
    text-decoration: none;
    color: black;
    height: 100%;
}

.nav-link {
    margin: 0.5em 0;
    border-bottom: 2px solid #ececec;
}

.nav-link.active {
    border-bottom: 2px solid #E6007E;
}

.nav-link:hover:not(.active) {
    border-bottom: 2px solid #E6007E;
    transition-duration: 0.5s;
}

.container {
    background-size: 62%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

button {
    background-color: #E6007E;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

button:hover {
    background-color: white;
    color: #E6007E;
}

.box {
    position: relative;
    width: 100%;
}

.box img {
    width: 100%;
    height: auto;
}

.fadingbox img {
    transition-duration: 0.5s;
}

.fadingbox:hover img {
    background-color: white;
    opacity: 0.4;
    transition-duration: 0.5s;
}

.box .btn {
    background-color: #ECC814;
    border: none;
    color: white;
    padding: 1em 2em;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

}

.delete-cookie-button {
    color: white;
}

.delete-cookie-button:hover {
    color: white;
    cursor: pointer;
}

.box .btn:hover {
    background-color: white;
    color: #ECC814;
}

.content {
    flex: 1 0 auto;
}

footer {
    background-color: #E6007E;
    color: white;
    margin: 1em 0 0 0;
    padding: 0.5em 0;
    flex-shrink: 0;
}

footer p {
    margin-bottom: 0;
}

body.modal-open > :not(.modal) {
    -webkit-filter: blur(5px);
    -moz-filter: blur(5px);
    -o-filter: blur(5px);
    -ms-filter: blur(5px);
    filter: blur(5px);
}

.ladyImage {
    width: 100%;
    max-width: 15em;
    height: auto;
}

img[alt='apple'] {
    margin: 0 0.2em;
}

i.sub-text {
    color: gray;
    text-align: right;
    font-weight: normal;
    font-size: 14px;
}

.apple-text {
    display: flex;
    align-items: center;
}

